started with closed hashing & fixed delete in open hash

--- a/Hashing/Makefile.win
+++ b/Hashing/Makefile.win
@@ -4,8 +4,8 @@
 CPP      = g++.exe
 CC       = gcc.exe
 WINDRES  = windres.exe
-OBJ      = main.o Hash_Open.o
-LINKOBJ  = main.o Hash_Open.o
+OBJ      = main.o Hash_Open.o Hash_Closed.o
+LINKOBJ  = main.o Hash_Open.o Hash_Closed.o
 LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc
 INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
 CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
@@ -29,3 +29,6 @@ main.o: main.c
 
 Hash_Open.o: Hash_Open.c
 	$(CC) -c Hash_Open.c -o Hash_Open.o $(CFLAGS)
+
+Hash_Closed.o: Hash_Closed.c
+	$(CC) -c Hash_Closed.c -o Hash_Closed.o $(CFLAGS)
